[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rayon = "1.10.0"
reqwest = { version = "0.12.5", features = ["blocking" , "json"] }
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
trust-dns-resolver = "0.23.2"
